MULE-11816: Remove jboss ts module
_ WIP

--- a/modules/extensions-spring-support/pom.xml
+++ b/modules/extensions-spring-support/pom.xml
@@ -57,6 +57,7 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
         </dependency>
+        <!--// TODO(pablo.kraan): JBOSS - is this dependency required?-->
         <dependency>
             <groupId>jboss</groupId>
             <artifactId>javassist</artifactId>
