--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,6 @@
         <javaMailVersion>1.4.3</javaMailVersion>
         <javaXmlBindVersion>2.1.13</javaXmlBindVersion>
         <jaxenVersion>1.1.1</jaxenVersion>
-        <jbossTsVersion>4.15.0.Final</jbossTsVersion>
         <jdomVersion>1.1.3</jdomVersion>
         <jettyVersion>9.0.7.v20131107</jettyVersion>
         <jodaTimeVersion>2.9.1</jodaTimeVersion>
@@ -1172,6 +1171,7 @@
                 <version>${asmVersion}</version>
             </dependency>
 
+            <!--// TODO(pablo.kraan): JBOSS - is this used? -->
             <dependency>
                 <groupId>jboss</groupId>
                 <artifactId>javassist</artifactId>
