--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
 
+dist: trusty
+
 jdk:
   - oraclejdk8
 
@@ -10,4 +12,9 @@ before_install:
  - export PATH=$M2_HOME/bin:$PATH
 
 script:
- - ./travis-sonarqube.sh
+ - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+
+addons:
+  sonarqube:
+    organization: "javierjeronimo-github"
+    
